# deepwriting-module

./: .env  .gitignore  .gitmodules  README.md  hw-keras-seq2seq.ipynb  hw_keras.ipynb  install.sh  pyproject.toml  requirements.txt
deepreading/baseline/: hw_keras.ipynb  server.py
deepreading/baseline-stacked/: server.py
deepreading/baseline_stacked/: hw_keras_deepwriting.ipynb
deepreading/seq2seq/: server.py
deepreading/shared/: util.py
keras/baseline/: server.py
keras/seq2seq/: hw_keras_seq2seq.ipynb  server.py
keras/shared/: util.py  variables.py
keras/simple/: requirements.txt  server.py
runs/tf-1602778133-deepwriting-classification_model/: config.json  config.pkl
runs/tf-1602778133-deepwriting-classification_model/summary/: events.out.tfevents.1602778134.martin-desktop
simple-keras/: requirements.txt  server-keras.py
svg_util/: flatten.ts  interpret_data.sh  package-lock.json  package.json  run_all.sh  tsconfig.json
touch-writing/: home.html  index.html  server.py  style.css  touch.js
