[tool.poetry]
name = "deepwriting-module"
version = "0.1.0"
description = "This module tests and plays around with the ideas presented by the deepwriting project from ETHZ"
authors = ["Martin Villavicencio <villavicencio.martin@protonmail.com>"]
packages = [
    {include="deepreading", from="."}
]

[tool.poetry.dependencies]
python = "^3.6"
absl-py = "==0.9.0"
astor = "==0.8.1"
astroid = "==2.3.2"
autopep8 = "==1.4.4"
cachetools = "==4.0.0"
certifi = "==2019.11.28"
chardet = "==3.0.4"
Click = "==7.0"
cycler = "==0.10.0"
entrypoints = "==0.3"
flake8 = "==3.7.8"
Flask = "==1.1.1"
Flask-Cors = "==3.0.8"
gast = "==0.3.3"
google-auth = "==1.11.3"
google-auth-oauthlib = "==0.4.1"
google-pasta = "==0.2.0"
grpcio = "==1.27.2"
h5py = "==2.10.0"
idna = "==2.9"
isort = "==4.3.21"
itsdangerous = "==1.1.0"
Jinja2 = "==2.10.3"
joblib = "==0.14.0"
Keras-Applications = "==1.0.8"
Keras-Preprocessing = "==1.1.1"
kiwisolver = "==1.1.0"
lazy-object-proxy = "==1.4.2"
Markdown = "==3.2.1"
MarkupSafe = "==1.1.1"
matplotlib = "==3.2.2"
mccabe = "==0.6.1"
merge-requirements = "==0.6"
numpy = "==1.18.1"
oauthlib = "==3.1.0"
opencv-python = "==4.4.0.44"
opt-einsum = "==3.1.0"
Pillow = "==6.2.2"
protobuf = "==3.11.3"
pyasn1 = "==0.4.8"
pyasn1-modules = "==0.2.8"
pycodestyle = "==2.5.0"
pyflakes = "==2.1.1"
pylint = "==2.4.3"
pyparsing = "==2.4.2"
python-dateutil = "==2.8.0"
requests = "==2.23.0"
requests-oauthlib = "==1.3.0"
rsa = "==4.0"
scikit-learn = "==0.21.3"
scipy = "==1.4.1"
sklearn = "==0.0"
svgwrite = "==1.3.1"
tensorboard = "==2.3.0"
tensorflow-estimator = "==2.3.0"
termcolor = "==1.1.0"
typed-ast = "==1.4.0"
urllib3 = "==1.25.8"
Werkzeug = "==1.0.0"
tensorflow = "2.3.0"
waitress = "^1.4.4"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server-baseline="deepreading.baseline.server:main"
server-seq2seq="deepreading.seq2seq.server:main"
server-baseline-stacked="deepreading.baseline-stacked.server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
